transfers rule-service and starts gRPC communication between rules and work-order